<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>itson</groupId>
        <artifactId>SistemaBibliotecaMusicalMain</artifactId>
        <version>1.0</version>
    </parent>
    <artifactId>SistemaBibliotecaMusicalPresentacion</artifactId>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>SistemaBibliotecaMusicalDominio</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>SistemaBibliotecaMusicalNegocio</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>bson</artifactId>
            <version>3.10.2</version>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.release>22</maven.compiler.release>
        <exec.mainClass>itson.sistemabibliotecamusicalpresentacion.SistemaBibliotecaMusicalPresentacion</exec.mainClass>
    </properties>
</project>